--- a/core/templates/core/main.html
+++ b/core/templates/core/main.html
@@ -37,7 +37,7 @@ width: 50%;
 .kl-heading{
   padding-top: 80px;
   padding-bottom: 80px;
-  width: 40%;
+  width: 50%;
 }
 
 .kl-heading2{
@@ -91,7 +91,7 @@ width: 50%;
 
   <section class="kl-section1">
     <div class="container center-block text-center kl-heading2">
-      <img src="{% static '/images/Knock-ledge-component1.png' %}" alt="image" height="24">
+      <img src="{% static '/images/component1.svg' %}" alt="image" height="24">
       <h2 style="padding-bottom:40px">Service 안내</h2>
 
       <div class="card-deck mb-3 text-center kl-card">
