schoolpage and coming soon pages updated

--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -40,12 +40,12 @@
                   전체 카테고리
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="{% url 'school' %}">School</a></li>
+                  <li><a class="dropdown-item" href="{% url 'teaching' %}">Teaching</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{% url 'ca' %}">C.A.</a></li>
                 </ul>
               </li>
             </ul>
