school page contents added

--- a/core/templates/core/school.html
+++ b/core/templates/core/school.html
@@ -30,6 +30,13 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+.kl-school-contenttitles {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.kl-color {
+  color: #ED3B0C;
+}
 </style>
 
 <div class="container-fluid">
@@ -46,8 +53,8 @@
   <div class="kl-block">
 
     <div class="kl-headertitle">
-      <h6>바이올린</h6>
-      <h5>당신의 Knoack 레벨을 알려주세요</h5>
+      <h6 style="color: #ED3B0C">바이올린</h6>
+      <h5>당신의 <a style="color: #ED3B0C">Knoack</a> 레벨을 알려주세요</h5>
     </div>
     
     <div class="card-deck">
@@ -116,7 +123,203 @@
 </section>
 
 <section>
-  <p></p>
+  <div class="kl-block" style="padding-top: 100px">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="thumbnail">
+          <img src="{% static 'images/schoolimage1.png' %}" alt="Lights" style="width:100%">
+          <div class="kl-school-contenttitles">
+            <h5>바이올린 걸음마 시작하기 (1)
+              바이올린 걸음마 시작하기 (1)
+              걸음마 시작하기 ...</h5>
+          </div>
+          <div class="row">
+            <div class="col-md-2">
+              <span class="badge badge-pill badge-danger">Knoach</span>
+            </div>
+            <div class="col-md-4">
+              <p>홍길동</p>
+            </div>
+            <div class="col-md-6">
+              <p style="color:gray; text-align: right;">+999</p>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+          <img src="{% static 'images/schoolimage2.png' %}" alt="Lights" style="width:100%">
+          <div class="kl-school-contenttitles">
+            <h5>바이올린 걸음마 시작하기 (1)
+              바이올린 걸음마 시작하기 (1)
+              걸음마 시작하기 ...</h5>
+          </div>
+          <div class="row">
+            <div class="col-md-2">
+              <span class="badge badge-pill badge-danger">Knoach</span>
+            </div>
+            <div class="col-md-4">
+              <p>홍길동</p>
+            </div>
+            <div class="col-md-6">
+              <p style="color:gray; text-align: right;">+999</p>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+          <img src="{% static 'images/schoolimage3.png' %}" alt="Lights" style="width:100%">
+          <div class="kl-school-contenttitles">
+            <h5>바이올린 걸음마 시작하기 (1)
+              바이올린 걸음마 시작하기 (1)
+              걸음마 시작하기 ...</h5>
+          </div>
+          <div class="row">
+            <div class="col-md-2">
+              <span class="badge badge-pill badge-danger">Knoach</span>
+            </div>
+            <div class="col-md-4">
+              <p>홍길동</p>
+            </div>
+            <div class="col-md-6">
+              <p style="color:gray; text-align: right;">+999</p>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="thumbnail">
+          <img src="{% static 'images/schoolimage4.png' %}" alt="Lights" style="width:100%">
+          <div class="kl-school-contenttitles">
+            <h5>바이올린 걸음마 시작하기 (1)
+              바이올린 걸음마 시작하기 (1)
+              걸음마 시작하기 ...</h5>
+          </div>
+          <div class="row">
+            <div class="col-md-2">
+              <span class="badge badge-pill badge-danger">Knoach</span>
+            </div>
+            <div class="col-md-4">
+              <p>홍길동</p>
+            </div>
+            <div class="col-md-6">
+              <p style="color:gray; text-align: right;">+999</p>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="kl-block" style="padding-bottom: 100px">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="thumbnail">
+            <img src="{% static 'images/schoolimage5.png' %}" alt="Lights" style="width:100%">
+            <div class="kl-school-contenttitles">
+              <h5>바이올린 걸음마 시작하기 (1)
+                바이올린 걸음마 시작하기 (1)
+                걸음마 시작하기 ...</h5>
+            </div>
+            <div class="row">
+              <div class="col-md-2">
+                <span class="badge badge-pill badge-danger">Knoach</span>
+              </div>
+              <div class="col-md-4">
+                <p>홍길동</p>
+              </div>
+              <div class="col-md-6">
+                <p style="color:gray; text-align: right;">+999</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="thumbnail">
+            <img src="{% static 'images/schoolimage6.png' %}" alt="Lights" style="width:100%">
+            <div class="kl-school-contenttitles">
+              <h5>바이올린 걸음마 시작하기 (1)
+                바이올린 걸음마 시작하기 (1)
+                걸음마 시작하기 ...</h5>
+            </div>
+            <div class="row">
+              <div class="col-md-2">
+                <span class="badge badge-pill badge-danger">Knoach</span>
+              </div>
+              <div class="col-md-4">
+                <p>홍길동</p>
+              </div>
+              <div class="col-md-6">
+                <p style="color:gray; text-align: right;">+999</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="thumbnail">
+            <img src="{% static 'images/schoolimage7.png' %}" alt="Lights" style="width:100%">
+            <div class="kl-school-contenttitles">
+              <h5>바이올린 걸음마 시작하기 (1)
+                바이올린 걸음마 시작하기 (1)
+                걸음마 시작하기 ...</h5>
+            </div>
+            <div class="row">
+              <div class="col-md-2">
+                <span class="badge badge-pill badge-danger">Knoach</span>
+              </div>
+              <div class="col-md-4">
+                <p>홍길동</p>
+              </div>
+              <div class="col-md-6">
+                <p style="color:gray; text-align: right;">+999</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="thumbnail">
+            <img src="{% static 'images/schoolimage8.png' %}" alt="Lights" style="width:100%">
+            <div class="kl-school-contenttitles">
+              <h5>바이올린 걸음마 시작하기 (1)
+                바이올린 걸음마 시작하기 (1)
+                걸음마 시작하기 ...</h5>
+            </div>
+            <div class="row">
+              <div class="col-md-2">
+                <span class="badge badge-pill badge-danger">Knoach</span>
+              </div>
+              <div class="col-md-4">
+                <p>홍길동</p>
+              </div>
+              <div class="col-md-6">
+                <p style="color:gray; text-align: right;">+999</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+<div class="kl-block" style="padding-bottom: 100px;">
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text" style="text-align: center; padding-top: 20px; padding-bottom: 20px;"><a style="color: #ED3B0C;"><b>Teaching!</b></a> 지금 <b>바이올린</b> 선생님 찾고 있다면?</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text" style="text-align: center; padding-top: 20px; padding-bottom: 20px;"><a style="color: #ED3B0C;"><b>CA!</b></a> 지금 내 <b>바이올린</b> 실력을 나누고 싶다면?</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </section>
 
 {% endblock %}
