update coming soon pages

--- a/core/templates/core/ca.html
+++ b/core/templates/core/ca.html
@@ -2,7 +2,7 @@
 
 <div class="bgimg">
     <div class="topleft" style="padding-top: 15px">
-        <a href="#" class="footer-site-logo"><img src="{% static '/images/footerlogo.svg' %}" alt="Logo"
+        <a href="{% url 'home' %}"" class="footer-site-logo"><img src="{% static '/images/footerlogo.svg' %}" alt="Logo"
             height="48"></a>
     </div>
     <div class="middle">
