--- a/core/templates/core/school.html
+++ b/core/templates/core/school.html
@@ -322,4 +322,14 @@
 </div>
 </section>
 
+<section>
+  <div class="kl-block" style="padding-bottom: 100px">
+    <h5>다른 음악강의는 어때요?</h5>
+    <div class="row">
+      <div class="col-sm-3 center-block kl-banner">
+          <p style="color:white;">당신이 보고프던 강의</p>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %}
